# git-worktree-wrapper

./: .gitignore  AGENTS.md  README.md  README.ru.md  architecture.md  pyproject.toml
.cursor/commands/: sync-docs-en-to-ru.md
.cursor/rules/: specify-rules.mdc
.github/: BRANCH_PROTECTION.md
.github/scripts/: setup-branch-protection.sh
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: architecture-diagram.html  architecture.md
specs/001-git-worktree-wrapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-git-worktree-wrapper/contracts/: cli-commands.md
src/gww/: __init__.py
src/gww/actions/: executor.py  matcher.py
src/gww/cli/: __init__.py  main.py
src/gww/cli/commands/: add.py  clone.py  init.py  migrate.py  pull.py  remove.py
src/gww/config/: loader.py  resolver.py  validator.py
src/gww/git/: branch.py  repository.py  worktree.py
src/gww/template/: __init__.py  evaluator.py  functions.py
src/gww/utils/: shell.py  xdg.py
src/sgw/: __init__.py
src/sgw/actions/: __init__.py  matcher.py
src/sgw/cli/: main.py
src/sgw/cli/commands/: add.py  clone.py  init.py  migrate.py  pull.py  remove.py
src/sgw/config/: __init__.py  loader.py  resolver.py  validator.py
src/sgw/git/: __init__.py  branch.py  worktree.py
src/sgw/template/: evaluator.py  functions.py
src/sgw/utils/: shell.py  uri.py  xdg.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli_commands.py  test_clone_flow.py  test_migration.py  test_worktree_management.py
tests/unit/: __init__.py  test_actions_matcher.py  test_config_loader.py  test_config_resolver.py  test_git_branch.py  test_git_repository.py  test_git_worktree.py  test_migrate.py  test_shell_completion.py  test_template_functions.py  test_uri_parsing.py
